argocd/applications/base/servarr/homarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik

  hostnames:
    - servarr.kube.squatch.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homarr
          port: 7575
